# vision-language-model

./: ReadME.md  pyproject.toml  requirements.txt
test/: test_model.py
vlm/: config.py
vlm/model/: language_model.py  utils.py  vision_transformer.py
