[project]
name = "vision-language-model"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=0.34.2",
    "numpy<3",
    "pillow>=11.3.0",
    "torch<3",
    "torchvision>=0.22.1",
    "transformers>=4.54.0",
    "wandb>=0.21.0",
]


[tool.setuptools.packages.find]
include = ["vlm"]